manifest/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-deployment
  labels:
    app: java
spec:
  replicas: 3
  selector:
    matchLabels:
      app: java
  template:
    metadata:
      labels:
        app: java
    spec:
      containers:
      - name: java
        image: demojava.azurecr.io/whitespacemxgsspringbootdocker:1.0
        ports:
        - containerPort: 80
