manifest/service.yml
apiVersion: v1
kind: Service
metadata:
  name: java-service
  labels:
    run: java-deployment
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: java-deployment
