manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-static
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /demo-path/$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /demo-path(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: java-service
            port: 
              number: 80
